# cockpit-assistant

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run_app.sh
app/: CMakeLists.txt
app/qml/: CockpitAssistant copy.qml  CockpitAssistant.qml  Main.qml  qml.qrc
app/qml/Dialogs/: Acknowledgements.qml  DynamicProgressDemo.qml  FileTransmission.qml
app/qml/MainWindow/: Root.qml
app/qml/Modules/: ButtonSwipe.qml  SmartFlow.qml
app/qml/Widgets/: BigButton.qml  SmartButton.qml  SmartWindow.qml
app/src/: AppInfo.h  CockpitAssistant.cpp  CockpitAssistant.h  main.cpp  mainwindow.h  mainwindow.ui
app/src/Module/: ModuleManager.cpp  ModuleManager.h
app/src/Platform/: NativeWindow.h  NativeWindow_UNIX.cpp  NativeWindow_Windows.cpp  NativeWindow_macOS.mm
app/src/Theme/: ThemeManager.cpp  ThemeManager.h
